# spicy-language-server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: check.yml
data/: foo-fail.spicy  foo.spicy  multiline-error-location-fail.spicy
src/: ast.pest  lib.rs  lsp.rs  main.rs  options.rs  semantic_tokens.rs  spicy.rs
src/lsp/: ast.rs  server.rs
src/snapshots/: spicy_language_server__semantic_tokens__test__injection_btest.snap  spicy_language_server__semantic_tokens__test__injection_printf.snap  spicy_language_server__semantic_tokens__test__injection_regex.snap  spicy_language_server__test__completion-2.snap  spicy_language_server__test__completion-3.snap  spicy_language_server__test__completion-4.snap  spicy_language_server__test__completion.snap  spicy_language_server__test__did_change.snap  spicy_language_server__test__did_change.snap.new  spicy_language_server__test__formatting-2.snap  spicy_language_server__test__formatting-2.snap.new  spicy_language_server__test__formatting.snap  spicy_language_server__test__range_formatting.snap  spicy_language_server__test__semantic_tokens_full-2.snap  spicy_language_server__test__semantic_tokens_full.snap
src/spicy/: types.rs
