[package]
name = "spicy-language-server"
version = "0.1.0"
authors = ["Benjamin Bannier <bbannier@gmail.com>"]
edition = "2018"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
walkdir = "2.3.1"
anyhow = "1.0.28"
lsp-server = "0.3.1"
structopt = "0.3.14"
flexi_logger = "0.15.2"
log = "0.4.8"
lsp-types = "0.73.0"
serde_json = "1.0.51"
serde = "1.0.106"
crossbeam-channel = "0.4.2"
static_assertions = "1.1.0"
regex = "1.3.7"
itertools = "0.9.0"
tokio = {"version" = "0.2.19", features=["rt-threaded", "macros"]}

[dev-dependencies]
futures = "0.3.4"

[[bin]]
name = "spicy-language-server"
path = "src/bin/spicy-language-server.rs"

[[bin]]
name = "parse-ast"
path = "src/bin/parse-ast.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
