[package]
name = "spicy-language-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spicy-format = { git = "https://github.com/bbannier/spicy-format", version = "0.24.2" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-std"] }
tower-lsp = "0.20.0"
tree-sitter-spicy = { git = "https://github.com/bbannier/tree-sitter-spicy", version = "0.0.1" }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"

[dev-dependencies]
insta = "1.43.1"
