[package]
name = "spicy-language-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
itertools = "0.14.0"
line-index = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
spicy-format = { git = "https://github.com/bbannier/spicy-format", version = "0.25.0" }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-std"] }
tower-lsp-server = "0.22.0"
tree-sitter = "0.25.8"
tree-sitter-highlight = "0.25.8"
tree-sitter-regex = "0.24.3"
tree-sitter-btest = { git = "https://github.com/bbannier/tree-sitter-btest" }
tree-sitter-spicy = { git = "https://github.com/bbannier/tree-sitter-spicy" }
tree-sitter-printf = "0.5.1"
tree-sitter-bash = "0.25.0"
thiserror = "2.0.12"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = "thin"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"

[dev-dependencies]
insta = "1.43.1"
